--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,9 @@
 body {
     background-color: rgb(46, 45, 45);
 }
+header {
+    background-color: rgb(117, 114, 114);
+}
 nav {
     width: 100%;
     background-color: rgb(61, 61, 61);
@@ -18,4 +21,19 @@ p {
 
 a {
     color: white;
+}
+
+
+main {
+    display: flex;
+    justify-content: center;
+}
+.corpus {
+    width: 70%;
+    height: 100vh;
+background-color: blueviolet;
+}
+.flag {
+    width: 15%;
+    background-color: rgb(213, 188, 237);
 }
