--- a/mystyle.css
+++ b/mystyle.css
@@ -64,8 +64,21 @@ main {
     height: 100vh;
 background-color: blueviolet;
 }
+#paladinPortrait {
+    height: 100%;
+}
+.corpus > p {
+    color:white
+}
 .flag {
     width: 15%;
     background-color: rgb(213, 188, 237);
+    height: 100vh;
+    margin: 0;
+    padding: 0;
 }
 
+footer {
+    margin: 0;
+    padding: 0;
+}
