--- a/mystyle.css
+++ b/mystyle.css
@@ -77,7 +77,7 @@ background-color: blueviolet;
     background-repeat: no-repeat;
     background-size: 100%;
     background-position-y: center;
-    position: fixed;    
+    /* position: fixed;     */
 }
 
 
