--- a/mystyle.css
+++ b/mystyle.css
@@ -7,6 +7,7 @@
 
 body {
     background-color: rgb(46, 45, 45);
+    height: 100%;
 }
 header {
     background-color: rgb(117, 114, 114);
@@ -45,6 +46,7 @@ header {
 
 h1 {
     color: white;
+    box-shadow: ;
 }
 p {
     color: white;
@@ -55,21 +57,10 @@ a {
 }
 
 
-main {
-    display: flex;
-    justify-content: center;
-}
-.corpus {
-    width: 70%;
-    height: 100vh;
-background-color: blueviolet;
-}
-#paladinPortrait {
-    height: 100vh;
-}
-.corpus > p {
-    color:white
-}
+
+
+
+/* ------------------ banniere drow --------------
 .flag {
     width: 15%;
     background-color: #28013f;
@@ -77,8 +68,51 @@ background-color: blueviolet;
     background-repeat: no-repeat;
     background-size: 100%;
     background-position-y: center;
-    /* position: fixed;     */
+    /* position: fixed;
+}*/
+
+ 
+
+
+/* main {
+    display: flex;
+    justify-content: center;
+} */
+
+
+
+
+.parallax {
+    /* The image used */
+    background-image: url("assets/cropped_DnDMonsterManuelExpandedCover.jpeg");
+    background-size: 50%;
+    margin-top: 100px;
+  
+    /* Set a specific height */
+    height: 1000px;
+  
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
+
+.corpus {
+    width: 100%;
+    height: 100%;
+    /* height: 100vh; */
+/* background-color: blueviolet; */
+}
+
+
+.corpus > p {
+    color:white
+}
+
+
+
+
 
 
 footer {
@@ -89,3 +123,4 @@ footer {
     height: 100vh;
     width: 100%;
 }
+
